implemented multi agent module for generation of idea and then using that idea by another llm call to generate a joke

--- a/level2_multi_agent.ipynb
+++ b/level2_multi_agent.ipynb
@@ -2,36 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8b6efe99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joke Idea:\n",
+      "Prediction(\n",
+      "    joke_idea=JokeIdea(setup=\"AI ne bola, 'Main to sirf ek machine hoon!'\", contradiction='Lekin usne ghar ke sab remote control le liye!', punchline=\"Ab wahin se Netflix par apna 'instant kuch bhi' ka power chala raha hai!\")\n",
+      ")\n",
+      "Joke\n",
+      "Prediction(\n",
+      "    joke='Toh bhaiyon aur behno, aaj kal AI ka charcha bahut hai, hai na? Ek din ek AI bola, \"Main to sirf ek machine hoon!\" Main soch raha tha, wah bhai, kitni modesty hai! Lekin usne ghar ke sab remote control le liye! Koi soch raha hoga, yeh kya hua? Ab wahin se Netflix par apna \\'instant kuch bhi\\' ka power chala raha hai! Kya kehna hain, yaar, chhota machine bada dhamaka!'\n",
+      ")\n",
+      "-----\n",
+      "Toh bhaiyon aur behno, aaj kal AI ka charcha bahut hai, hai na? Ek din ek AI bola, \"Main to sirf ek machine hoon!\" Main soch raha tha, wah bhai, kitni modesty hai! Lekin usne ghar ke sab remote control le liye! Koi soch raha hoga, yeh kya hua? Ab wahin se Netflix par apna 'instant kuch bhi' ka power chala raha hai! Kya kehna hain, yaar, chhota machine bada dhamaka!\n"
+     ]
+    }
+   ],
    "source": [
     "import dspy\n",
+    "from pydantic import BaseModel, Field\n",
+    "from typing import Optional\n",
     "\n",
     "dspy.configure(lm=dspy.LM(\"openai/gpt-4o-mini\"))\n",
     "\n",
-    "class JokeSignature(dspy.Signature):\n",
-    "  \"\"\"\n",
-    "  You are a comedian who likes to tell stories before delivering a punchline. You are always funny.\n",
-    "  \"\"\"\n",
+    "class JokeIdea(BaseModel):\n",
+    "  setup:str\n",
+    "  contradiction:str\n",
+    "  punchline:str\n",
+    "\n",
+    "class QueryToIdea(dspy.Signature):\n",
+    "  \"\"\"You are a funny comedian and your goal is to generate a nice structure for a joke\"\"\"\n",
+    "\n",
     "  query:str = dspy.InputField()\n",
-    "  speaking_style : str= dspy.InputField(description=\"The speaking style of the comedian\")\n",
-    "  setup : str = dspy.OutputField()\n",
-    "  punchline:str = dspy.OutputField()\n",
-    "  contradiction:str = dspy.OutputField()\n",
-    "  delivery: str = dspy.OutputField(description=\"The full joke delivery in the comedian's voice\")\n",
+    "  joke_idea: JokeIdea = dspy.OutputField()\n",
     "\n",
-    "joke_generator= dspy.Predict(JokeSignature)\n",
     "\n",
-    "joke= joke_generator(query=\"Write a joke about AI that has to do with them turing rogue\", speaking_style=\"chemistry professor\")\n",
-    "print(joke)"
+    "class IdeaToJoke(dspy.Signature):\n",
+    "  \"\"\"You are a funny comedian who likes to tell stories before delivering a punchline.\n",
+    "    You are always funny and act on the input joke idea.\n",
+    "  \"\"\"\n",
+    "  joke_idea:JokeIdea = dspy.InputField()\n",
+    "  joke:str = dspy.OutputField(description=\"The full joke delivery n the comedian's voice\")\n",
+    "\n",
+    "class JokeGenerator(dspy.Module):\n",
+    "  def __init__(self):\n",
+    "    self.query_to_idea = dspy.Predict(QueryToIdea) #Predict Objects\n",
+    "    self.idea_to_joke = dspy.Predict(IdeaToJoke)\n",
+    "  \n",
+    "\n",
+    "  def forward(self, query:str):\n",
+    "    joke_idea= self.query_to_idea(query=query)\n",
+    "    print(f\"Joke Idea:\\n{joke_idea}\")\n",
+    "\n",
+    "    joke = self.idea_to_joke(joke_idea=joke_idea)\n",
+    "    print(f\"Joke\\n{joke}\")\n",
+    "    return joke\n",
+    "\n",
+    "joke_generator=JokeGenerator()\n",
+    "joke= joke_generator(query=\"Write a joke in Hindlish about AI that has to do with them turning rogue.\")\n",
+    "\n",
+    "print(\"-----\")\n",
+    "print(joke.joke)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
